# XrdLustreOssWrapper

./: .gitignore  CMakeLists.txt  Containerfile  README  Readme.md  XrdLustreOss.spec
src/: .Makefile.swp  .clang-format  CMakeLists.txt  LustreOss.cc  LustreOss.hh  Makefile  lfs.c  qsStruct.h  test.c
